Fix anchor link bug Add filedset to login page

--- a/src/empty.html
+++ b/src/empty.html
@@ -37,9 +37,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/">Homepage</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/empty.html?title=The+institue">The institute</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">Faculties</a>
@@ -69,7 +66,7 @@
                                     <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.hmlt?title=Master">Master</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Master">Master</a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="/empty.html?title=Continuing+education">Continuing education</a>
@@ -107,7 +104,8 @@
 
     <main class="container mt-4 text-center main">
         <h1 class="text-primary py-4 mb-4" id="title-placeholder">Loading...</h1>
-        <p class="text-secondary" id="text-placeholder"></p>
+        <p class="text-secondary invisible" id="text-placeholder">The page is currently under construction.
+            <a href="/">Click here</a> to go back to homepage.</p>
     </main>
 
 
