--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/">Homepage</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/empty.html?title=The+institue">The institute</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">Faculties</a>
@@ -69,7 +66,7 @@
                                     <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.hmlt?title=Master">Master</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Master">Master</a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="/empty.html?title=Continuing+education">Continuing education</a>
